--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,10 +5,45 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FriendsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/friendsRecyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="" />
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/common_10dp">
+
+            <TextView
+                android:id="@+id/requests"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|start"
+                android:clickable="true"
+                android:focusable="true"
+                android:text="@string/friend_requests"
+                android:textColor="@color/blueOrchid"
+                android:textSize="@dimen/text_size_16sp" />
+
+            <TextView
+                android:id="@+id/friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|end"
+                android:clickable="true"
+                android:focusable="true"
+                android:tag="@string/add_friends"
+                android:text="@string/add_friends"
+                android:textColor="@color/blueOrchid"
+                android:textSize="@dimen/text_size_16sp" />
+
+        </FrameLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/friends_fragment_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </FrameLayout>
