need to add eventListener for all database operations need to test

--- a/app/src/main/res/layout/chats_recycler_view_items.xml
+++ b/app/src/main/res/layout/chats_recycler_view_items.xml
@@ -79,7 +79,8 @@
             android:layout_centerVertical="true"
             android:background="@drawable/blue_circle"
             android:contentDescription="@string/profile_picture"
-            android:tag="Default" />
+            android:tag="Default"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
