--- a/app/src/main/res/layout/fragment_chats_tab.xml
+++ b/app/src/main/res/layout/fragment_chats_tab.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ChatsFragment">
+    tools:context=".fragments.ChatsTabFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chatsRecyclerView"
+        android:id="@+id/chatsTabRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem=""/>
